src/test/deca/syntax/invalid/personal/reversed_assignation.deca
// Description:
//    affecter un entier 
//
// Resultats:
//    Erreur 
//
// Historique:
//    cree le 07/01/2025
{
    int x = 3 ;
    3 = x;  
}